default_3bd788c0-bf9e-4165-adef-f3c266f01ff3_v1_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: petstore
spec:
  hostnames:
  - example.com
  rules:
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v1/cat
  - matches:
    - method: POST
      path:
        type: Exact
        value: /v1/cat
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v1/dog
  - matches:
    - method: GET
      path:
        type: Exact
        value: /v1/snake
status:
  parents: null
